--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
-  author: your name
-  description: 
-  company: your company (optional)
+  author: Maxim Avanov
+  description: Ansible Galaxy role for pyenv (https://github.com/yyuu/pyenv).
+  company:
   # Some suggested licenses:
   # - BSD (default)
   # - MIT
@@ -10,14 +10,14 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
-  min_ansible_version: 1.2
+  license: MIT
+  min_ansible_version: 1.5
   #
   # Below are all platforms currently available. Just uncomment
   # the ones that apply to your role. If you don't see your 
   # platform on this list, let us know and we'll get it added!
   #
-  #platforms:
+  platforms:
   #- name: EL
   #  versions:
   #  - all
@@ -65,8 +65,8 @@ galaxy_info:
   #  - 9.1
   #  - 9.1
   #  - 9.2
-  #- name: Ubuntu
-  #  versions:
+    - name: Ubuntu
+      versions:
   #  - all
   #  - lucid
   #  - maverick
@@ -76,7 +76,7 @@ galaxy_info:
   #  - quantal
   #  - raring
   #  - saucy
-  #  - trusty
+       - trusty
   #- name: SLES
   #  versions:
   #  - all
@@ -101,7 +101,7 @@ galaxy_info:
   # Below are all categories currently available. Just as with
   # the platforms above, uncomment those that apply to your role.
   #
-  #categories:
+  categories:
   #- cloud
   #- cloud:ec2
   #- cloud:gce
@@ -110,15 +110,14 @@ galaxy_info:
   #- database
   #- database:nosql
   #- database:sql
-  #- development
+    - development
   #- monitoring
   #- networking
   #- packaging
-  #- system
+    - system
   #- web
 dependencies: []
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
-  
