--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,4 +35,4 @@
   sudo: no
   shell: . $HOME/.pyenvrc && pyenv install {{ item }}
          creates="{{ pyenv_path }}/versions/{{ item }}/bin/python"
-  with_items: "{{ pyenv_python_versions }}"
+  with_items: pyenv_python_versions
