--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 # defaults file for pyenv
-pyenv_owner: "$USER"
-pyenv_path: "$HOME/pyenv"
+pyenv_path: "{{ ansible_env.HOME }}/pyenv"
+pyenv_owner: "{{ ansible_env.USER }}"
 pyenv_python_versions:
   - 3.4.0
+
