Update default variables

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,6 +33,6 @@
 
 - name: Install Python {{ pyenv_python_version }}
   sudo: no
-  shell: . $HOME/.pyenvrc && pyenv install {{ item }}
+  shell: . {{ pyenv_path }}/.pyenvrc && pyenv install {{ item }}
          creates="{{ pyenv_path }}/versions/{{ item }}/bin/python"
   with_items: pyenv_python_versions
