--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -31,7 +31,7 @@
               line="source {{ pyenv_path }}/.pyenvrc"
               state=present
 
-- name: Install Python {{ pyenv_python_version }}
+- name: Install Python interpreters {{ pyenv_python_versions }}
   sudo: no
   shell: . {{ pyenv_path }}/.pyenvrc && pyenv install {{ item }}
          creates="{{ pyenv_path }}/versions/{{ item }}/bin/python"
