--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,4 +4,5 @@ pyenv_path: "{{ ansible_env.HOME }}/pyenv"
 pyenv_owner: "{{ ansible_env.USER }}"
 pyenv_python_versions:
   - 3.4.0
-
+pyenv_virtualenvs:
+  - { venv_name: "latest", py_version: "3.4.0" }
