Run OS-specific tasks

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,45 +1,2 @@
 ---
-- name: Install development packages necessary for building Python
-  apt:  pkg={{ item }} state=present
-  with_items:
-    - libssl-dev
-    - libbz2-dev
-    - libsqlite3-dev
-    - libreadline-dev
-
-- name: Install PyEnv
-  sudo: no
-  git:  repo=git://github.com/yyuu/pyenv.git
-        dest={{ pyenv_path }}
-
-- name: Install PyEnv-virtualenv plugin
-  sudo: no
-  git:  repo=git://github.com/yyuu/pyenv-virtualenv.git
-        dest="{{ pyenv_path }}/plugins/pyenv-virtualenv"
-
-- name: Install .pyenvrc
-  sudo: no
-  template: src=".pyenvrc.j2"
-            dest="{{ pyenv_path }}/.pyenvrc"
-            owner={{ pyenv_owner }}
-            group={{ pyenv_owner }}
-            mode=0644
-
-- name: Modify .bashrc
-  sudo: no
-  lineinfile: dest="/home/{{ pyenv_owner }}/.bashrc"
-              regexp="\.pyenvrc$"
-              line="source {{ pyenv_path }}/.pyenvrc"
-              state=present
-
-- name: Install Python interpreters {{ pyenv_python_versions }}
-  sudo: no
-  shell: . {{ pyenv_path }}/.pyenvrc && pyenv install {{ item }}
-         creates="{{ pyenv_path }}/versions/{{ item }}/bin/python"
-  with_items: pyenv_python_versions
-
-- name: Create virtual environments
-  sudo: no
-  shell: . {{ pyenv_path }}/.pyenvrc && pyenv virtualenv {{ item.py_version }} {{ item.venv_name }}
-         creates="{{ pyenv_path }}/versions/{{ item.venv_name }}/bin/python"
-  with_items: pyenv_virtualenvs
+- include: "{{ ansible_os_family }}.yml"
