--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,4 +1,9 @@
 ---
+- name: Install prerequisite packages
+  apt:  pkg={{ item }} state=present
+  with_items:
+    - git
+
 - name: Install development packages necessary for building Python
   apt:  pkg={{ item }} state=present
   with_items:
