--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,11 +1,19 @@
 ---
+- name: Ensure apt cache is up to date
+  apt:
+    update_cache: yes
+
 - name: Install prerequisite packages
-  apt:  pkg={{ item }} state=present
+  apt:
+    pkg: "{{ item }}"
+    state: present
   with_items:
     - git
 
 - name: Install development packages necessary for building Python
-  apt:  pkg={{ item }} state=present
+  apt:
+    pkg: "{{ item }}"
+    state: present
   with_items:
     - libssl-dev
     - libbz2-dev
@@ -14,21 +22,24 @@
 
 - name: Install PyEnv
   sudo: no
-  git:  repo=https://github.com/yyuu/pyenv.git
-        dest={{ pyenv_path }}
+  git:
+    repo: https://github.com/yyuu/pyenv.git
+    dest: "{{ pyenv_path }}"
 
 - name: Install PyEnv-virtualenv plugin
   sudo: no
-  git:  repo=https://github.com/yyuu/pyenv-virtualenv.git
-        dest="{{ pyenv_path }}/plugins/pyenv-virtualenv"
+  git:
+    repo: https://github.com/yyuu/pyenv-virtualenv.git
+    dest: "{{ pyenv_path }}/plugins/pyenv-virtualenv"
 
 - name: Install .pyenvrc
   sudo: no
-  template: src=".pyenvrc.j2"
-            dest="{{ pyenv_path }}/.pyenvrc"
-            owner={{ pyenv_owner }}
-            group={{ pyenv_owner }}
-            mode=0644
+  template:
+    src: ".pyenvrc.j2"
+    dest: "{{ pyenv_path }}/.pyenvrc"
+    owner: "{{ pyenv_owner }}"
+    group: "{{ pyenv_owner }}"
+    mode: "0644"
 
 - name: Modify .bashrc
   sudo: no
