--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -9,6 +9,10 @@
     state: present
   with_items:
     - git
+    # On Ubuntu 12.04 build may fail with the following error:
+    #   python-build: wget (< 1.14) doesn't support Server Name Indication.
+    #   Please install curl (>= 7.18.1) and try again
+    - curl
 
 - name: Install development packages necessary for building Python
   apt:
