Fix syntax error

--- a/test.yml
+++ b/test.yml
@@ -3,6 +3,6 @@
     - 'defaults/main.yml'
   tasks:
     - name: Output relevant vars
-      command: echo "Owner: {{ pyenv_owner }}"
+      command: echo 'Owner: Owner "{{ pyenv_owner }}"'
 
     - include: 'tasks/main.yml'
