--- a/test.yml
+++ b/test.yml
@@ -2,7 +2,7 @@
   vars_files:
     - 'defaults/main.yml'
   tasks:
-    - name: Output relevant vars
-      command: echo 'Owner: Owner "{{ pyenv_owner }}"'
+    - debug:
+        msg: "Owner: {{ pyenv_owner }}"
 
     - include: 'tasks/main.yml'
