--- a/test.yml
+++ b/test.yml
@@ -4,5 +4,7 @@
   tasks:
     - debug:
         msg: "Owner: {{ pyenv_owner }}"
+    - debug:
+        msg: "'$pyenv_owner' == 'root'"
 
     - include: 'tasks/main.yml'
