try another syntax

--- a/test.yml
+++ b/test.yml
@@ -5,6 +5,6 @@
     - debug:
         msg: "Owner: {{ pyenv_owner }}"
     - debug:
-        msg: "'$pyenv_owner' == 'root'"
+        msg: "{{ pyenv_owner }}" == 'root'
 
     - include: 'tasks/main.yml'
