--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,7 +14,7 @@ galaxy_info:
   min_ansible_version: 2.0
   #
   # Below are all platforms currently available. Just uncomment
-  # the ones that apply to your role. If you don't see your 
+  # the ones that apply to your role. If you don't see your
   # platform on this list, let us know and we'll get it added!
   #
   platforms:
@@ -77,6 +77,7 @@ galaxy_info:
   #  - raring
   #  - saucy
        - trusty
+       - yakkety
   #- name: SLES
   #  versions:
   #  - all
