--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -8,6 +8,7 @@
     pkg: "{{ item }}"
     state: present
   with_items:
+    - build-essential
     - git
     # On Ubuntu 12.04 build may fail with the following error:
     #   python-build: wget (< 1.14) doesn't support Server Name Indication.
