load pyenv autocomplete file for bash

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@
 pyenv_path: "{{ ansible_env.HOME }}/pyenv"
 pyenv_owner: "{{ ansible_env.USER }}"
 pyenv_update_git_install: no
+pyenv_enable_autocompletion: no
 pyenv_python_versions:
   - 3.5.0
 pyenv_virtualenvs:
