Implement user, system install Support RedHat

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,9 @@
 ---
 # defaults file for pyenv
-pyenv_path: "{{ ansible_env.HOME }}/pyenv"
+pyenv_env: "user"
+pyenv_path: "{% if pyenv_env == 'user' %}{{ ansible_env.HOME }}/pyenv{% else %}/usr/local/pyenv{% endif %}"
 pyenv_owner: "{{ ansible_env.USER }}"
+pyenv_setting_path: "{% if pyenv_env == 'user' %}~/.bashrc{% else %}/etc/profile.d/pyenv.sh{% endif %}"
 pyenv_update_git_install: no
 pyenv_enable_autocompletion: no
 pyenv_python_versions:
