--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,13 @@
 ---
 - include: Debian.yml
   when: ansible_os_family == "Debian"
+- include: RedHat.yml
+  when: ansible_os_family == "RedHat"
+
+- include: install.yml
+  become_user: "{{ pyenv_owner }}"
+  when: pyenv_env == "user"
+- include: install.yml
+  become: true
+  when: pyenv_env == "system"
+
