--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -2,6 +2,7 @@
 - name: Ensure apt cache is up to date
   apt:
     update_cache: yes
+  become: true
 
 - name: Install prerequisite packages
   apt:
@@ -14,6 +15,7 @@
     #   python-build: wget (< 1.14) doesn't support Server Name Indication.
     #   Please install curl (>= 7.18.1) and try again
     - curl
+  become: true
 
 - name: Install development packages necessary for building Python
   apt:
@@ -24,53 +26,5 @@
     - libbz2-dev
     - libsqlite3-dev
     - libreadline-dev
+  become: true
 
-- name: Install PyEnv
-  git:
-    repo: https://github.com/yyuu/pyenv.git
-    dest: "{{ pyenv_path }}"
-    update: "{{pyenv_update_git_install}}"
-  become_user: "{{pyenv_owner}}"
-
-- name: Install PyEnv-virtualenv plugin
-  git:
-    repo: https://github.com/yyuu/pyenv-virtualenv.git
-    dest: "{{ pyenv_path }}/plugins/pyenv-virtualenv"
-    update: "{{pyenv_update_git_install}}"
-  become_user: "{{pyenv_owner}}"
-
-- name: Install .pyenvrc
-  template:
-    src: ".pyenvrc.j2"
-    dest: "{{ pyenv_path }}/.pyenvrc"
-    owner: "{{ pyenv_owner }}"
-    group: "{{ pyenv_owner }}"
-    mode: "0644"
-
-- name: Load pyenv env variables in .bashrc
-  lineinfile: dest="~/.bashrc"
-              regexp="\.pyenvrc$"
-              line="source {{ pyenv_path }}/.pyenvrc"
-              state=present
-              create=yes
-  become_user: "{{pyenv_owner}}"
-
-- name: Add pyenv autocomplete in .bashrc
-  lineinfile: dest="~/.bashrc"
-              regexp="pyenv\.bash$"
-              line="source {{ pyenv_path }}/completions/pyenv.bash"
-              state=present
-  when: pyenv_enable_autocompletion
-  become_user: "{{pyenv_owner}}"
-
-- name: Install Python interpreters "{{ pyenv_python_versions }}"
-  shell: . {{ pyenv_path }}/.pyenvrc && pyenv install {{ item }}
-         creates="{{ pyenv_path }}/versions/{{ item }}/bin/python"
-  with_items: "{{pyenv_python_versions}}"
-  become_user: "{{pyenv_owner}}"
-
-- name: Create virtual environments
-  shell: . {{ pyenv_path }}/.pyenvrc && pyenv virtualenv {{ item.py_version }} {{ item.venv_name }}
-         creates="{{ pyenv_path }}/versions/{{ item.venv_name }}/bin/python"
-  with_items: "{{pyenv_virtualenvs}}"
-  become_user: "{{pyenv_owner}}"
