--- a/meta/main.yml
+++ b/meta/main.yml
@@ -18,12 +18,12 @@ galaxy_info:
   # platform on this list, let us know and we'll get it added!
   #
   platforms:
-  #- name: EL
-  #  versions:
+    - name: EL
+      versions:
   #  - all
   #  - 5
-  #  - 6
-  #  - 7
+       - 6
+       - 7
   #- name: GenericUNIX
   #  versions:
   #  - all
@@ -77,6 +77,7 @@ galaxy_info:
   #  - raring
   #  - saucy
        - trusty
+       - xenial
        - yakkety
   #- name: SLES
   #  versions:
