Added `pyenv_update` option: This install pyenv plugin And update pyenv installable python version list This shoudl be done before trying to install a fresh new version of python

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ script:
   - echo localhost > inventory
   - ansible-playbook -i inventory test.yml --syntax-check
   - ansible-playbook -i inventory test.yml --connection=local --sudo -vvv --diff
+  - ansible-playbook -i inventory test_update.yml --syntax-check
+  - ansible-playbook -i inventory test_update.yml --connection=local --sudo -vvv --diff
 #after_failure:
