--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -8,6 +8,5 @@
   apt:
     pkg: "{{ item }}"
     state: present
-  with_items:
-    - "{{ pyenv_debian_packages }}"
+  with_items: "{{ pyenv_debian_packages }}"
   become: true
