--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
-- include: Debian.yml
+- include_tasks: Debian.yml
   when: ansible_os_family == "Debian"
-  
-- include: RedHat.yml
+
+- include_tasks: RedHat.yml
   when: ansible_os_family == "RedHat"
 
 
-- include: install.yml
+- include_tasks: install.yml
   become: true
   become_user: "{{ pyenv_owner }}"
   when: pyenv_env == "user"
-  
-- include: install.yml
+
+- include_tasks: install.yml
   become: true
   when: pyenv_env == "system"
 
