--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- include: Darwin.yml
+  when: ansible_os_family == "Darwin"
+
 - include: Debian.yml
   when: ansible_os_family == "Debian"
   
