--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - include: Debian.yml
   when: ansible_os_family == "Debian"
-  
+
 - include: RedHat.yml
   when: ansible_os_family == "RedHat"
 
@@ -9,9 +9,10 @@
 - include: install.yml
   become: true
   become_user: "{{ pyenv_owner }}"
+  environment: "{{ pyenv_env_vars }}"
   when: pyenv_env == "user"
-  
+
 - include: install.yml
   become: true
+  environment: "{{ pyenv_env_vars }}"
   when: pyenv_env == "system"
-
