--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,8 @@ pyenv_python_versions:
   - 3.5.0
 pyenv_virtualenvs:
   - { venv_name: "latest", py_version: "3.5.0" }
+# For a system install, the shims dir will not be writable by users, disable rehashing
+pyenv_init_options: "{% if pyenv_env != 'user' %}--no-rehash{% endif %}"
 
 pyenv_update: no
 
