Install make on RHEL.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -39,6 +39,7 @@ pyenv_debian_packages:
   - libxmlsec1-dev
   - libffi-dev
 pyenv_redhat_packages:
+  - make
   - git
   - gcc
   - libselinux-python
