--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -50,8 +50,11 @@
   loop: "{{ ansible_local['pyenv_python_installations']['to_reinstall'] | default([]) }}"
 
 - name: Install Python interpreters "{{ pyenv_python_versions }}"
-  shell: . {{ pyenv_path }}/.pyenvrc && env PYTHON_CONFIGURE_OPTS="{{ pyenv_python_configure_opts }}" pyenv install {{ item }}
-         creates="{{ pyenv_path }}/versions/{{ item }}/bin/python"
+  shell: ". {{ pyenv_path }}/.pyenvrc && pyenv install {{ item }}"
+  environment:
+    PYTHON_CONFIGURE_OPTS: "{{ pyenv_python_configure_opts }}"
+  args:
+    creates: "{{ pyenv_path }}/versions/{{ item }}/bin/python"
   with_items: "{{ pyenv_python_versions }}"
 
 - name: Create virtual environments
