--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -48,6 +48,7 @@
   args:
     removes: "{{ pyenv_path }}/versions/{{ item }}/bin/python"
   loop: "{{ ansible_local['pyenv_python_installations']['to_reinstall'] | default([]) }}"
+  when: pyenv_uninstall_python_w_wrong_configure_opts
 
 - name: Install Python interpreters "{{ pyenv_python_versions }}"
   shell: ". {{ pyenv_path }}/.pyenvrc && pyenv install {{ item }}"
