Improve idempotency by allowing the user to uninstall existing Python interpreters that lack desired Python configure options (#42)
* Bump require Ansible version from 1.9.4 to 2.5.0

* Add but don't use custom fact checker that checks if desired Python installations are missing or need to be re-compiled

* Use the facts checker to check existing installations for pyenv_python_configure_opts options

* Uninstall existing python installations that have the wrong configure flags

* Install python versions using the 'environment' and 'args' keys and also use the creates options

* Uninstall Python intrepreters w/ wrong configure opts only when the user chooses to

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -42,10 +42,20 @@
 - name: Update Pyenv interpreter list
   shell: . {{ pyenv_path }}/.pyenvrc && pyenv update
   when: pyenv_update
-  
+
+- name: Uninstall existing Python interpreters w/ wrong compilation flags
+  shell: ". {{ pyenv_path }}/.pyenvrc && pyenv uninstall -f {{ item }}"
+  args:
+    removes: "{{ pyenv_path }}/versions/{{ item }}/bin/python"
+  loop: "{{ ansible_local['pyenv_python_installations']['to_reinstall'] | default([]) }}"
+  when: pyenv_uninstall_python_w_wrong_configure_opts
+
 - name: Install Python interpreters "{{ pyenv_python_versions }}"
-  shell: . {{ pyenv_path }}/.pyenvrc && env PYTHON_CONFIGURE_OPTS="{{ pyenv_python_configure_opts }}" pyenv install {{ item }}
-         creates="{{ pyenv_path }}/versions/{{ item }}/bin/python"
+  shell: ". {{ pyenv_path }}/.pyenvrc && pyenv install {{ item }}"
+  environment:
+    PYTHON_CONFIGURE_OPTS: "{{ pyenv_python_configure_opts }}"
+  args:
+    creates: "{{ pyenv_path }}/versions/{{ item }}/bin/python"
   with_items: "{{ pyenv_python_versions }}"
 
 - name: Create virtual environments
