--- a/test_update.yml
+++ b/test_update.yml
@@ -1,9 +1,9 @@
 - hosts: all
   gather_facts: True
   vars_files:
-    - 'defaults/main.yml'
-    - 'tests/test_update_vars.yml'
+    - "defaults/main.yml"
+    - "tests/test_update_vars.yml"
   tasks:
     - debug:
         msg: "Owner: {{ pyenv_owner }}"
-    - include: 'tasks/main.yml'
+    - include: "tasks/main.yml"
