--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -3,12 +3,14 @@
   git:
     repo: https://github.com/pyenv/pyenv.git
     dest: "{{ pyenv_path }}"
+    version: "{{ pyenv_git_ref }}"
     update: "{{ pyenv_update_git_install }}"
 
 - name: Install PyEnv-virtualenv plugin
   git:
     repo: https://github.com/yyuu/pyenv-virtualenv.git
     dest: "{{ pyenv_path }}/plugins/pyenv-virtualenv"
+    version: "{{ pyenv_virtualenv_git_ref }}"
     update: "{{ pyenv_update_git_install }}"
 
 - name: Install PyEnv-update plugin
