--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -4,6 +4,7 @@
     repo: https://github.com/pyenv/pyenv.git
     dest: "{{ pyenv_path }}"
     version: "{{ pyenv_git_ref }}"
+    # TODO: Make update always yes if "version" is specified
     update: "{{ pyenv_update_git_install }}"
 
 - name: Install PyEnv-virtualenv plugin
@@ -11,6 +12,7 @@
     repo: https://github.com/yyuu/pyenv-virtualenv.git
     dest: "{{ pyenv_path }}/plugins/pyenv-virtualenv"
     version: "{{ pyenv_virtualenv_git_ref }}"
+    # TODO: Make update always yes if "version" is specified
     update: "{{ pyenv_update_git_install }}"
 
 - name: Install PyEnv-update plugin
