--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 ---
 name: Release
 
-on:
+"on":
   push:
     branches:
       - main
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install Ansible
         run: |
-          pip install --constraint=.github/workflows/constraints.txt ansible-base
+          pip install --constraint=.github/workflows/constraints.txt ansible
 
       - name: Trigger a new import on Galaxy.
         run: ansible-galaxy role import --api-key ${{ secrets.GALAXY_TOKEN }} $(echo ${{ github.repository }} | cut -d/ -f1) $(echo ${{ github.repository }} | cut -d/ -f2)
