--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,14 +10,14 @@ repos:
       - id: trailing-whitespace
       - id: check-added-large-files
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.3.0
+    rev: v2.3.1
     hooks:
       - id: prettier
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.26.1
     hooks:
       - id: yamllint
-        args: [-c=.yamllint]
+        args: ["-c=.yamllint", "."]
   - repo: https://github.com/ansible-community/ansible-lint.git
     rev: v5.0.12
     hooks:
