--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,7 +1,7 @@
 ---
 - name: Ensure apt cache is up to date
   apt:
-    update_cache: yes
+    update_cache: true
     cache_valid_time: 3600
   become: true
 
