--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,9 +8,10 @@ pyenv_update_git_install: false
 pyenv_enable_autocompletion: false
 pyenv_python_versions:
   - 3.9.6
-pyenv_global: 
+pyenv_global:
   - 3.7.6
-pyenv_virtualenvs: []
+pyenv_virtualenvs:
+  []
   # - { venv_name: "latest", py_version: "3.9.6" }
 # For a system install, the shims dir will not be writable by users, disable rehashing
 pyenv_init_options: "{% if pyenv_env != 'user' %}--no-rehash{% endif %}"
