--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,21 +1,21 @@
 ---
-- include_tasks: custom_facts.yml
+- import_tasks: custom_facts.yml
   become: true
 
-- include_tasks: Darwin.yml
+- import_tasks: Darwin.yml
   when: ansible_os_family == "Darwin"
 
-- include_tasks: Debian.yml
+- import_tasks: Debian.yml
   when: ansible_os_family == "Debian"
 
-- include_tasks: RedHat.yml
+- import_tasks: RedHat.yml
   when: ansible_os_family == "RedHat"
 
-- include_tasks: install.yml
+- import_tasks: install.yml
   become: true
   become_user: "{{ pyenv_owner }}"
   when: pyenv_env == "user"
 
-- include_tasks: install.yml
+- import_tasks: install.yml
   become: true
   when: pyenv_env == "system"
