--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,16 +47,21 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v2.4.0
         with:
-          fetch-depth: 2
+          path: 'staticdev.pyenv'
 
       - name: Set up Python
         uses: actions/setup-python@v2.3.1
         with:
           python-version: "3.10"
 
+      - name: Upgrade pip
+        run: |
+          python3 -m pip install --constraint=.github/workflows/constraints.txt pip
+          python3 -m pip --version
+
       - name: Install test dependencies
         run: |
-          pip3 install --constraint=.github/workflows/constraints.txt ansible molecule[docker] docker
+          python3 -m pip install --constraint=.github/workflows/constraints.txt ansible molecule[docker] docker
 
       - name: Run Molecule tests
         run: molecule test
