--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,12 +56,12 @@ jobs:
 
       - name: Upgrade pip
         run: |
-          python3 -m pip install --constraint=.github/workflows/constraints.txt pip
+          python3 -m pip install --constraint=staticdev.pyenv/.github/workflows/constraints.txt pip
           python3 -m pip --version
 
       - name: Install test dependencies
         run: |
-          python3 -m pip install --constraint=.github/workflows/constraints.txt ansible molecule[docker] docker
+          python3 -m pip install --constraint=staticdev.pyenv/.github/workflows/constraints.txt ansible molecule[docker] docker
 
       - name: Run Molecule tests
         run: molecule test
