--- a/molecule/multi-version/converge.yml
+++ b/molecule/multi-version/converge.yml
@@ -3,16 +3,20 @@
   hosts: all
   become: true
 
-  roles:
-    - role: staticdev.pyenv
-      pyenv_global:
-        - 3.10.0
-        - 3.9.9
-      pyenv_python_versions:
-        - 3.10.0
-        - 3.9.9
-      pyenv_virtualenvs:
-        - venv_name: latest_v310
-          py_version: 3.10.0
-        - venv_name: latest_v39
-          py_version: 3.9.9
+
+  tasks:
+    - name: "Include staticdev.pyenv"
+      include_role:
+        name: "staticdev.pyenv"
+      vars:
+        pyenv_global:
+          - 3.10.1
+          - 3.9.9
+        pyenv_python_versions:
+          - 3.10.1
+          - 3.9.9
+        pyenv_virtualenvs:
+          - venv_name: latest_v310
+            py_version: 3.10.1
+          - venv_name: latest_v39
+            py_version: 3.9.9
