--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v2.4.0
         with:
-          fetch-depth: 2
+          path: 'staticdev.pyenv'
 
       - name: Set up Python
         uses: actions/setup-python@v2.3.1
